2008-03-06  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/mat.h, itpp/base/matfunc.h, itpp/base/specmat.cpp,
	tests/mat_test.cpp, tests/mat_test.ref: Deprecate
	Mat<>::set_submatrix(r1,r2,c1,c2,m) function

	This function provides identical results as set_submatrix(r,c,m).
	Moreover, the r2 and c2 indexing arguments are redundant, because
	their values are determined by the size of the input matrix m.
	This patch marks this function as deprecated, for possible removal
	from future IT++ major releases.

	* itpp/base/mat.cpp, itpp/base/mat.h: Add in_range(r,c),
	col_in_range(c) and row_in_range(r) inline methods

	This is a pure clean-up patch which simplifies it_assert_debug()
	checks. BTW, it also includes a few cosmetic changes to other
	assertion checks.

	* itpp/base/mat.cpp, itpp/base/mat.h: Make consistent naming of
	variables used in the Mat class interface

	This patch unifies the variable names in the Mat class interface.
	The following names are now commonly used:
	- m, m1, m2, etc.: matrix
	- v: vector
	- t: simple numeric type Num_T, e.g. bin, int, double
	- r, r1, r2: row index
	- c, c1, c2: column index
	- i: generic index

	* itpp/base/mat.cpp, itpp/base/mat.h: Clean-up redundant use of
	"const" keyword in the Mat class

	There is no need for declaring the returned by value types with an
	additional "const" keyword. Moreover, Num_T is assumed a simple or
	built in type for the Mat class, i.e. bin, short int, int, double
	and complex<double>. Therefore it might be more efficient to pass
	arguments of this type by value, in which case the "const" keyword
	is also redundant.

	* itpp/base/vec.h: Deprecate elem_div(t,v) function of the Vec
	class

	This function is only an alias to operator/(t,v). Besides, no
	similar methods for operator/(v,t), operator*(t,v) and
	operator*(v,t) exist.

	* itpp/comm/modulator.h, tests/modulator_test.cpp,
	tests/modulator_test.ref: Fix bug [1908644] in
	Modulator<>::set(symbols, bits2symbols) function
